# cbt-mini-school

./: .gitignore  .pdm-python  BROADSHEET_PAGINATION_GUIDE.md  PAGINATION_IMPLEMENTATION.py  PROJECT_CLEANUP_PLAN.md  README.md  REPORT_CONFIG_FIX.md  VERIFY_CONFIG_FIX.md  app.py  celery_app.py  check_db.py  cleanup_init_scripts.py  config.py  create_test_data.py  final_perfect_report.md  final_working_solution.js  generate_ssl_cert.py  guide.txt  initialize_all_data.py  installation_guide.md  modern_single_page_report.js  package-lock.json  package.json  populate_demo_questions.py  pyproject.toml  quick_install_guide.md  solo.js  start_fake_redis.py  tailwind.config.js  tasks.py  test_watermark_fix.py  try.py  verify_broadsheet_pagination.py
docs/: ADMIN_USER_SETUP.md  BLANK_PDF_FIX.md  CASE_INSENSITIVE_LOGIN.md  CBT_PAGE_FIXES.md  CBT_SESSION_CHECKLIST.md  CBT_SESSION_IMPLEMENTATION_SUMMARY.md  CBT_SESSION_PERSISTENCE.md  CBT_SESSION_QUICK_START.md  CBT_SESSION_README.md  CBT_SESSION_USER_GUIDE.md  CBT_TEMPLATE_TROUBLESHOOTING.md  CLIENT_SIDE_PDF_GENERATION.md  COMMENT_SECTION_LAYOUT_FIX.md  CONVERT_WORD_TO_LATEX_GUIDE.md  DARK_MODE_CONTRAST_FIXES.md  DATABASE_SCHEMA.md  EASY_MATH_QUESTIONS_GUIDE.md  ENHANCED_PDF_STYLING.md  FINAL_CBT_DESIGN.md  FINAL_PERFORMANCE_FIX.md  FINAL_RECOMMENDATION.md  FINAL_SINGLE_PAGE_FIT.md  FONT_REBUILD_SETUP.md  FULL_REPORT_SYSTEM_FIXES.md  GRADE_SCALE_LAYOUT_FIX.md  IMMEDIATE_REPORT_FIXES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_REPORT_CARD_SYSTEM.md  MANUAL_UPDATE_REQUIRED.md  MATH_AND_IMAGE_SUPPORT_GUIDE.md  (+21 more)
(+212 files in other folders)
